# reminders-app

./: .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc  ARCHITECTURE.md  GPT_INTEGRATION_QUICKSTART.md  INTEGRATION.md  OVERVIEW.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_GPT_INTEGRATION.md  dependencies.py  google_tasks_client.py  gpt-integration-example.ts  models.py  package-lock.json  package.json  pyproject.toml  server.py  simulate-device.ts  test-integration.sh  test_client.py  test_server.py  test_simple.py  tsconfig.json
.husky/: pre-commit
ios-app/: .swiftlint.yml  README.md  SETUP.md  buildServer.json
ios-app/GPTReminders/: public.pem
ios-app/GPTReminders.xcodeproj/: project.pbxproj
ios-app/GPTReminders/Sources/: AppDelegate.swift  CommandHandler.swift  JWTVerifier.swift  Models.swift  RemindersService.swift  ViewController.swift
ios-app/GPTReminders/Supporting/: Info.plist
scripts/: README.md  add-public-key-to-xcode.js  build-and-run.sh  configure-bundle-id.js  configure-server-url-auto.js  configure-server-url.js  test-e2e.ts  test-integration.sh  test-simulator-integration.sh  tsconfig.json
server/: .env.example  .eslintrc.json  .gitignore  README.md  env.example  package-lock.json  package.json  tsconfig.json
server/src/: apns.ts  crypto-helper.ts  index.ts  openai-schema.ts  types.ts
